<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_for_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/xoxo_logo"
        app:layout_constraintBottom_toTopOf="@+id/titleImage"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xoxo_1" />

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/tic_tac_toe"
        app:layout_constraintBottom_toTopOf="@+id/play"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/board_img" />

    <Button
        android:id="@+id/play"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="111dp"
        android:background="@drawable/custom_button"
        android:drawableStart="@mipmap/ic_play"
        android:onClick="startGame"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/play"
        android:textColor="#DB0000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleImage" />

</android.support.constraint.ConstraintLayout>